Bug 1726186 [Linux] Don't advertise full range color for DMABufSurfaceYUV, r=rmader

Differential Revision: https://phabricator.services.mozilla.com/D132463